src/app/user/profesional-list/profesional-list.page.scss
.text-10 {
  font-size: 10px;
}
.fStart {
  margin-left: 10px;
}
.cusSelect {
  border: 0px;
  outline: 0px;
  font-size: 10px;
  background-color: none;
  width: 100%;
  border: solid 2px #009ace;
  border-radius: 10px;
  padding: 5px;
  -webkit-appearance: none;
  -moz-appearance: none; /* Firefox */
  -webkit-appearance: none; /* Safari and Chrome */
  appearance: none;
  background-image: url("data:image/svg+xml;utf8,<svg fill='#009ace' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
  background-repeat: no-repeat;
  background-position-x: 98%;
  background-position-y: 50%;
}
.filt-icon {
  font-size: 11px;
}
.profileImg {
  margin-left: 10px;
  height: 45px;
  width: 45px;
}
.prof-cont {
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}
.no-border {
  padding-top: 2px;
  padding-bottom: 2px;
}
.eSelect {
  color: red;
  font-size: 16px;
  font-weight: bold;
}

.titleSelect {
  font-size: 14px;
  font-weight: bold;

  @media (min-height: 768px) {
    font-size: 18px;
  }
}
.textSelect {
  font-size: 10px;
  line-height: 0.5;

  @media (min-height: 768px) {
    font-size: 14px;
  }
}
.badge-text {
  font-size: 9px;
}
.locate-cont {
  //margin-top: 20px;
  border-radius: 50px;
  height: 25px;
  width: auto;
  display: inline-flex;
  align-items: center;
  text-align: center;
  margin: 0 1px;
  //background-color: #009ace;
}
.ratingText {
  font-size: 12px;
}
.rating-text {
  font-size: 18px;
  margin: 0;
  padding: 0;
}

.reset-text {
  //display: -webkit-flex;
}
.floatin-btn {
  --ion-color-base: transparent !important;
  --ion-color-tint: transparent !important;
  --box-shadow: none;

  ion-fab-button {
    --box-shadow: none;
  }
}
.fab-icon {
  width: 3em;
  height: 3em;
  --box-shadow: none;
}
.items-center {
  align-content: center;
  align-items: center;
}

